CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(RegisterLabelMaps)

FIND_PACKAGE ( ITK )
IF ( ITK_FOUND )
  INCLUDE(${ITK_USE_FILE})
ELSE ( ITK_FOUND )
  MESSAGE ( FATAL_ERROR "Cannot build without ITK" )
ENDIF ( ITK_FOUND )

FIND_PATH(COMMON_DIRECTORY Common)
INCLUDE_DIRECTORIES(${COMMON_DIRECTORY})

SET ( RegisterLabelMaps_SOURCE RegisterLabelMaps.cxx )

ADD_EXECUTABLE ( RegisterLabelMaps ${RegisterLabelMaps_SOURCE})
TARGET_LINK_LIBRARIES ( RegisterLungs ITKIO ITKBasicFilters ITKCommon ITKAlgorithms )



